<resources>
    <string name="app_name">Flare</string>
    <string name="btn_connect">Подключить</string>
    <string name="btn_disconnect">Отключить</string>
    <string name="btn_clipboard">Буфер обмена</string>
    <string name="label_add_profiles">Добавить профили</string>
    <string name="vpn_active">VPN активен</string>
    <string name="vpn_disconnect">Отключить</string>
    <string name="menu_edit_subscription">Редактировать</string>
    <string name="edit_sub_title">Редактирование подписки</string>
    <string name="edit_sub_name_hint">Название подписки</string>
    <string name="edit_sub_url_hint">URL Подписки</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_header_vpn">Настройки VPN</string>
    <string name="settings_header_appearance">Оформление</string>
    <string name="settings_btn_base">Базовые</string>
    <string name="settings_btn_advanced">Расширенные</string>
    <string name="settings_item_theme">Тема и шрифт</string>
    <string name="settings_item_language">Язык</string>
    <string name="notif_language_changed">Язык приложения изменен на %s</string>
    <string name="settings_language_title">Язык</string>
    <string name="settings_label_language">Язык приложения</string>
    <string name="language_auto">Авто (система)</string>
    <string name="language_en">English</string>
    <string name="language_ru">Русский</string>
    <string name="language_restart_hint">Почти готово! Нужно перезапустить приложение.</string>
    <string name="label_servers">Сервера</string>
    <string name="btn_apply">Применить</string>
    <string name="settings_header_app">Настройки приложения</string>
    <string name="settings_item_ping">Пинг</string>
    <string name="settings_item_subscriptions">Подписки</string>
    <string name="settings_advanced_title">Расширенные настройки</string>
    <string name="settings_label_fragmentation">Фрагментация</string>
    <string name="settings_label_packet_type">Откат</string>
    <string name="settings_label_fragment_interval">Тайм-аут</string>
    <string name="settings_label_fragment_size">Размер</string>
    <string name="settings_label_fragment_sleep">Задержка</string>
    <string name="settings_label_noise_type">Тип</string>
    <string name="settings_label_noise_packet">Пакет</string>
    <string name="settings_label_noise_delay">Задержка</string>
    <string name="settings_label_noise_apply">Применить к ip</string>
    <string name="settings_label_mux">Mux</string>
    <string name="settings_label_mux_protocol">Способ</string>
    <string name="settings_label_mux_streams">Кол-во потоков</string>
    <string name="settings_label_mux_padding">Добавить шум</string>
    <string name="settings_label_remote_dns">Remote DNS</string>
    <string name="settings_label_dns_url">URL</string>
    <string name="settings_hint_dns_url">Auto</string>
    <string name="settings_label_fake_ip">Поддельная DNS (Fake IP)</string>
    <string name="settings_label_use_fake_ip">Включить Fake IP</string>
    <string name="settings_label_mtu_title">Изменение MTU</string>
    <string name="settings_label_mtu">MTU</string>
    <string name="settings_restart_tunnel_hint">Настройки будут применены при следующем создании туннеля.</string>
    <string name="vpn_error_tunnel_creation">Не удалось создать туннель</string>
    <string name="settings_stack_header">Сетевой стек</string>
    <string name="settings_label_stack_title">Использовать</string>
    <string name="settings_label_stack">%s</string>
    <string name="settings_ping_title">Настройки пинга</string>
    <string name="settings_label_ping_type">Тип пинга</string>
    <string name="settings_ping_type_get">via proxy GET</string>
    <string name="settings_ping_type_head">via proxy HEAD</string>
    <string name="settings_ping_type_tcp">TCP</string>
    <string name="settings_ping_type_icmp">ICMP</string>
    <string name="settings_label_test_url">Test-URL</string>
    <string name="settings_hint_test_url">https://www.google.com/generate_204</string>
    <string name="settings_desc_test_url">Данный параметр отвечает за то какая ссылка будет использована для проверки задержки</string>
    <string name="settings_label_ping_display">Отображение пинга</string>
    <string name="settings_label_ping_style">Стиль</string>
    <string name="settings_ping_style_time">Время</string>
    <string name="settings_ping_style_icon">Значок</string>
    <string name="settings_ping_style_both">Время и значок</string>
    <string name="settings_basic_title">Базовые настройки</string>
    <string name="settings_label_split_tunneling">Раздельное туннелирование</string>
    <string name="settings_header_autostart">Автозапуск</string>
    <string name="settings_label_autostart">Создавать туннель при запуске приложения</string>
    <string name="settings_btn_change">Изменить</string>
    <string name="dialog_apps_title">Приложения</string>
    <string name="dialog_domens_title">Домены</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_save">Сохранить</string>
    <string name="split_tunneling_desc_default">Выберите сайты и приложения которые работают через VPN или напрямую.</string>
    <string name="search_apps_hint">Поиск приложений...</string>
    <string name="tab_apps">Приложения</string>
    <string name="tab_sites">Сайты</string>
    <string name="split_mode_whitelist">Белый список</string>
    <string name="split_mode_blacklist">Черный список</string>
    <string name="sites_hint">www.com\nwww2.com</string>
    <string name="label_mode">Режим</string>
    <string name="json_edit_success">JSON %s был успешно изменен.</string>
    <string name="label_profile_name">Название профиля</string>
    <string name="label_json_data">Данные JSON</string>
    <string name="settings_subscriptions_title">Подписки</string>
    <string name="settings_label_auto_update">Автообновление</string>
    <string name="settings_label_update_every">Обновлять подписки каждые</string>
    <string name="settings_hint_update_interval">3600</string>
    <string name="sub_update_success">%d Подписок было успешно обновлено.</string>
    <string name="sub_update_success_single">Подписка %s была успешно обновлена.</string>
    <string name="sub_update_error">Не удалось обновить все подписки!</string>
    <string name="sub_update_error_single">Не удалось обновить подписку!</string>
    <string name="sub_deleted_success">Подписка %s была удалена!</string>
    <string name="menu_update_subscription">Обновить</string>
    <string name="menu_delete_subscription">Удалить</string>
    <string name="settings_theme_title">Тема и шрифт</string>
    <string name="settings_theme_header">Тема</string>
    <string name="settings_label_theme">Стиль</string>
    <string name="settings_label_font">Шрифт</string>
    <string name="settings_btn_change_font">Изменить шрифт</string>
    <string name="settings_font_geologica">Geologica</string>
    <string name="settings_bg_effects_header">Фоновые эффекты</string>
    <string name="settings_label_enable_gradient">Градиент</string>
    <string name="settings_label_gradient_animation">Анимация градиента</string>
    <string name="settings_label_gradient_speed">Скорость анимации</string>
    <string name="theme_auto">Авто</string>
    <string name="theme_day">День</string>
    <string name="theme_night">Ночь</string>
    <string name="settings_header_notifications">Уведомления</string>
    <string name="settings_label_status_notification">Уведомление с статусом</string>
    <string name="settings_label_status">Статус</string>
    <string name="hint_add_first_profile">Добавьте свой первый профиль или подписку с помощью кнопки ниже!</string>
    <string name="sub_single_profiles">Список профилей</string>
    <string name="servers_title_flare">Сервера Flare</string>
    <string name="servers_desc_flare">Flare Servers: анонимные, не хранят логи, работают быстро и доступны 24/7.</string>
    <string name="servers_title_create">Создать свой сервер</string>
    <string name="servers_desc_create">Ваш собственный сервер, который контролируете только вы.</string>
    <string name="servers_ssh_profile_name">Имя профиля</string>
    <string name="servers_ssh_profile_name_hint">Мой сервер</string>
    <string name="servers_ssh_ip">IP-адрес</string>
    <string name="servers_ssh_port">Порт SSH</string>
    <string name="servers_ssh_port_hint">22</string>
    <string name="servers_ssh_username">Имя пользователя SSH</string>
    <string name="servers_ssh_password">Пароль или ключ SSH</string>
    <string name="servers_protocol_title">Выберите протокол</string>
    <string name="servers_protocol_xray_title">Xray с REALITY</string>
    <string name="servers_protocol_xray_desc">Xray с REALITY маскирует VPN-Трафик под веб-трафик. Высокая устойчивость к обнаружению, обеспечивает высокую приватность и скорость</string>
    <string name="servers_xray_setup_title">Настройка Xray</string>
    <string name="servers_xray_port_label">Порт Xray</string>
    <string name="servers_xray_port_desc">Порт, на котором будет работать ваш VPN сервеp. 443 — стандартный порт для маскировки под HTTPS.</string>
    <string name="servers_xray_sni_label">SNI (Server Name Indication)</string>
    <string name="servers_xray_sni_desc">Домен, под который будет маскироваться ваш трафик. Google.com — надежный вариант по умолчанию.</string>
    <string name="servers_setup_title">Настройка сервера...</string>
    <string name="servers_setup_success">Сервер был успешно создан!</string>
    <string name="servers_setup_success_desc">Вы можете найти его внутри подписки "Мои сервера"</string>
    <string name="btn_next">Далее</string>
    <string name="btn_finish">Завершить</string>
    <string name="sub_my_servers">Мои сервера</string>
    <string name="settings_header_logging">Логирование</string>
    <string name="settings_label_core_log">Журнал SingBox</string>
    <string name="settings_label_core_log_level">Уровень логирования</string>
    <string name="settings_desc_logging">Включение логов полезно для отладки, но может раскрыть ваши серверные адреса и ключи.</string>
    <string name="settings_header_best_profile">Управление профилями</string>
    <string name="settings_label_best_profile">Выбирать лучший профиль</string>
    <string name="settings_label_best_profile_interval">Обновлять выбор каждые</string>
    <string name="settings_hint_best_profile_interval">1800</string>
    <string name="settings_desc_best_profile">Данная функция выбирает лучший сервер в подписке с самым маленьким пингом</string>
    <string name="notif_best_profile_title">Обновление профиля</string>
    <string name="notif_best_profile_body">Выбор профиля был обновлен на %1$s с пингом %2$dms</string>
    <string name="settings_label_best_profile_only_connected">Только если туннель запущен</string>
    <string name="settings_label_best_profile_notif">Выбор лучшего профиля</string>
    <string name="option_yes">Да</string>
    <string name="option_no">Нет</string>
    <string name="option_enable">Включить</string>
    <string name="option_disable">Отключить</string>
    <string name="onboarding_welcome_title">Добро пожаловать в Flare!</string>
    <string name="onboarding_welcome_question">Хотите пройти первоначальную настройку?</string>
    <string name="onboarding_permissions_title">Разрешения</string>
    <string name="onboarding_notifications_title">Уведомления</string>
    <string name="onboarding_notifications_desc">Уведомления нужны чтобы приложение работало в фоне 24/7 а так же что-бы видеть актуальный статус туннеля</string>
    <string name="onboarding_battery_title">Энергопотребление</string>
    <string name="onboarding_battery_desc">Что-бы приложение работало стабильно и Android его не закрывал нужно отключить экономию энергии для Flare</string>
    <string name="onboarding_fragmentation_title">Фрагментация</string>
</resources>